--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "heroku-postbuild": "ng build",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "json-server": "json-server --watch fcb.json"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +26,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "express": "^4.18.1",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
