--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "json-server": "json-server --watch fcb.json"
+    "serve": "ng serve -o",
+    "json-server": "json-server --watch fcb.json",
+    "all-start": "concurrently \"npm run serve\" \"npm run json-server\""
   },
   "private": true,
   "dependencies": {
@@ -25,6 +27,7 @@
     "@angular/router": "^14.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "concurrently": "^7.3.0",
     "express": "^4.18.1",
     "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
